--- a/Android/StockPortfolio/res/layout/activity_quotes.xml
+++ b/Android/StockPortfolio/res/layout/activity_quotes.xml
@@ -9,7 +9,7 @@
         android:name="pt.feup.stockportfolio.QuotesFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_quote" />
+        tools:layout="@layout/fragment_quotes" />
 
     <FrameLayout
         android:id="@+id/details_layout"
