--- a/Android/StockPortfolio/res/layout/activity_quotes.xml
+++ b/Android/StockPortfolio/res/layout/activity_quotes.xml
@@ -4,17 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <!-- The main content view -->
+
     <FrameLayout
         android:id="@+id/content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <pt.feup.stockportfolio.GraphView
+            android:id="@+id/graphView1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </FrameLayout>
     <!-- The navigation drawer -->
-    <ListView android:id="@+id/left_drawer"
-        android:layout_width="240dp"
+
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#efefef"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="#efefef"/>
+        android:dividerHeight="0dp" />
+
 </android.support.v4.widget.DrawerLayout>
