--- a/Android/StockPortfolio/res/layout/quote_real.xml
+++ b/Android/StockPortfolio/res/layout/quote_real.xml
@@ -2,18 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
+    android:background="#efefef"
     android:orientation="vertical"
-    android:padding="10dp" >
+    android:padding="0dp" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#efefef"
+        android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <RelativeLayout
             android:layout_width="100dp"
             android:layout_height="45dp"
+            android:layout_marginTop="10dp"
             android:background="#d6df23" >
 
             <TextView
@@ -28,16 +31,30 @@
                 android:textSize="30sp" >
             </TextView>
         </RelativeLayout>
+
 		<View
-            android:layout_width="3dp"
-            android:layout_height="45dp"
-            android:background="#ffffff" >
+		    android:layout_width="3dp"
+		    android:layout_height="45dp"
+		    android:layout_marginTop="10dp"
+		    android:background="#ffffff" >
+
             </View>
+
        <include
-           android:layout_width="0dp"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="10dp"
            layout="@layout/quote_graph" >
+
 </include>
     </LinearLayout>
-	
+
+	<View
+	    android:layout_width="233dp"
+	    android:layout_height="1dp"
+	    android:layout_gravity="center_horizontal"
+	    android:background="#d0d0d0" >
+
+</View>	
 
 </LinearLayout>
