--- a/Android/StockPortfolio/res/layout/quote_update.xml
+++ b/Android/StockPortfolio/res/layout/quote_update.xml
@@ -13,6 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="10dp" >
 
