--- a/Android/StockPortfolio/res/layout/activity_quotes.xml
+++ b/Android/StockPortfolio/res/layout/activity_quotes.xml
@@ -10,10 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
-        <pt.feup.stockportfolio.GraphView
-            android:id="@+id/graphView1"
+        <fragment class="pt.feup.stockportfolio.QuoteDetailsFragment"
+            android:id="@+id/details"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            ></fragment>
 
     </FrameLayout>
     <!-- The navigation drawer -->
