--- a/Android/StockPortfolio/res/layout/fragment_quote_details.xml
+++ b/Android/StockPortfolio/res/layout/fragment_quote_details.xml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
-    
+    android:layout_height="match_parent" >
+      
     <LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+     <pt.feup.stockportfolio.GraphView
+         android:id="@+id/graphView1"
+         android:layout_width="match_parent"
+         android:layout_height="175dp" />
     
     <TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Quote"
-		android:textStyle="bold"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quote"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
     
-    <TextView 
+    <TextView
         android:id="@+id/quote_details_tick"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff" />
     
     <TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Quantity"
-		android:textStyle="bold"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quantity"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
     
-    <TextView 
+    <TextView
         android:id="@+id/quote_details_quantity"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff" />
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,15 +67,17 @@
     </LinearLayout>
     
     <TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Current Value"
-		android:textStyle="bold"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Current Value"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
     
-    <TextView 
+    <TextView
         android:id="@+id/quote_details_value"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff" />
 
 </LinearLayout>
     
