--- a/Android/StockPortfolio/res/drawable-nodpi/border_red.xml
+++ b/Android/StockPortfolio/res/drawable-nodpi/border_red.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
  <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-   <solid android:color="#ffffff"/>
+   <solid android:color="#efefef"/>
    <stroke
     android:width="1dp"
-    android:color="#8cc63e"/>
+    android:color="#ed1c24"/>
  </shape>
