--- a/Android/StockPortfolio/res/layout/fragment_add_quote_2.xml
+++ b/Android/StockPortfolio/res/layout/fragment_add_quote_2.xml
@@ -7,62 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-     <LinearLayout
-         android:id="@+id/insertGraphHere"
-         android:layout_width="match_parent"
-         android:layout_height="175dp"
-         android:gravity="center"
-         android:orientation="horizontal" >
-
-         <ProgressBar
-             android:id="@+id/graphProgress"
-             style="?android:attr/progressBarStyleLarge"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content" />
-
-     </LinearLayout>
-    
-     <View
-         android:layout_width="match_parent"
-         android:layout_height="30dp"
-         android:background="#efefef" />
-    
-    <pt.feup.stockportfolio.TextViewFont
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="please wait..."
-        android:textColor="#ffffff"
-        android:textSize="40sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_gravity="center_vertical"
-        android:background="#efefef"
-        android:gravity="center_vertical"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="is making you "
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#8cc63e" />
-
-        <TextView
-            android:id="@+id/personalworth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="..."
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#8cc63e" />
-        
-    </LinearLayout>
       <RelativeLayout 
         android:id="@+id/d"
         android:layout_width="fill_parent"
@@ -143,7 +87,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:text="..."
+            android:text="0"
             android:textColor="#8cc63e"
             android:textSize="40sp" />
         
@@ -158,36 +102,7 @@
         android:layout_alignParentLeft="true"
         android:background="#efefef" >
 	
-    
-        <TextView
-            android:id="@+id/percent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:text="..."
-            android:textColor="#8cc63e"
-            android:textSize="35sp" />
-
-        <ImageView
-            android:id="@+id/arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/percent"
-            android:src="@drawable/greenarrow_03" />
-        
-	        
-    </RelativeLayout>
-            <RelativeLayout
-        android:id="@+id/RelativeLayout01"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:background="#efefef" >
-
-                <TextView
+       <TextView
             android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -199,7 +114,7 @@
             android:textColor="#ff0000"
             android:textSize="30sp" />
 
-        <pt.feup.stockportfolio.TextViewFont
+        <TextView
             android:id="@+id/TextView02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -209,7 +124,50 @@
             android:text="trading at"
             android:textColor="#a7a9ab"
             android:textSize="12sp" />
-                
+
+        <ProgressBar
+            android:id="@+id/updating"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:visibility="gone" />
+	        
+    </RelativeLayout>
+            <RelativeLayout
+        android:id="@+id/RelativeLayout01"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:background="#efefef" >
+
+        <EditText
+            android:id="@+id/ticker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:text="ticker"
+            android:textColor="#a7a9ab"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:id="@+id/accept"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/ticker"
+            android:layout_marginRight="10dp"
+            android:background="#ff0000"
+            android:gravity="center" >
+
+            <ImageView
+                android:id="@+id/ImageView01"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/plus" />
+        </LinearLayout>
 
     </RelativeLayout>
     </RelativeLayout>
