--- a/Android/StockPortfolio/res/layout/quote_graph.xml
+++ b/Android/StockPortfolio/res/layout/quote_graph.xml
@@ -34,7 +34,7 @@
             android:layout_marginTop="4dp"
             android:background="@drawable/border_green" >
 
-            <TextView
+            <pt.feup.stockportfolio.TextViewFont
                 android:id="@+id/value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
