--- a/Android/StockPortfolio/res/layout/quote_real.xml
+++ b/Android/StockPortfolio/res/layout/quote_real.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="10dp"
             android:background="#afafaf" >
 
-            <TextView
+            <pt.feup.stockportfolio.TextViewFont
                 android:id="@+id/quote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
                 android:text="MSFT"
                 android:textColor="#ffffff"
                 android:textSize="30sp" >
-            </TextView>
+            </pt.feup.stockportfolio.TextViewFont>
         </RelativeLayout>
 
 		<View
