--- a/Android/StockPortfolio/res/layout/quote_update.xml
+++ b/Android/StockPortfolio/res/layout/quote_update.xml
@@ -29,7 +29,7 @@
                 android:layout_height="45dp"
                 android:background="#afafaf" >
 
-                <TextView
+                <pt.feup.stockportfolio.TextViewFont
                     android:id="@+id/quote"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
                     android:text="MSFT"
                     android:textColor="#ffffff"
                     android:textSize="30sp" >
-                </TextView>
+                </pt.feup.stockportfolio.TextViewFont>
             </RelativeLayout>
 			<View
             android:layout_width="3dp"
