--- a/Android/StockPortfolio/res/layout-land/activity_quotes.xml
+++ b/Android/StockPortfolio/res/layout-land/activity_quotes.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-	 <ListView
+    <ListView
         android:id="@+id/left_drawer"
         android:layout_width="280dp"
         android:layout_height="match_parent"
@@ -13,19 +13,23 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" />
-	
-    <FrameLayout
-        android:id="@+id/details_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
 
-        <fragment class="pt.feup.stockportfolio.QuoteDetailsFragment"
-            android:id="@+id/details"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/details_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            ></fragment>
+            android:layout_height="match_parent" >
 
-    </FrameLayout>
-   
+            <fragment
+                android:id="@+id/details"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                class="pt.feup.stockportfolio.QuoteDetailsFragment" >
+            </fragment>
+        </FrameLayout>
+    </ScrollView>
 
 </LinearLayout>
