--- a/Android/StockPortfolio/res/layout-land/activity_quotes.xml
+++ b/Android/StockPortfolio/res/layout-land/activity_quotes.xml
@@ -15,15 +15,9 @@
         android:dividerHeight="0dp" />
 	
     <FrameLayout
-        android:id="@+id/details_layout"
+        android:id="@+id/content_frame"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
-
-        <fragment class="pt.feup.stockportfolio.QuoteDetailsFragment"
-            android:id="@+id/details"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            ></fragment>
 
     </FrameLayout>
    
