--- a/Android/StockPortfolio/res/layout/fragment_add_quote_2.xml
+++ b/Android/StockPortfolio/res/layout/fragment_add_quote_2.xml
@@ -32,8 +32,6 @@
             android:id="@+id/TextView04"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="false"
-            android:layout_alignWithParentIfMissing="true"
             android:layout_below="@+id/shares"
             android:layout_centerHorizontal="true"
             android:text="shares"
@@ -163,10 +161,10 @@
             android:gravity="center" >
 
             <ImageView
-                android:id="@+id/ImageView01"
+                android:id="@+id/button"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/plus" />
+                android:src="@drawable/sync" />
         </LinearLayout>
 
     </RelativeLayout>
