Fixes, my portfolio page

--- a/Android/StockPortfolio/res/layout-land/activity_quotes.xml
+++ b/Android/StockPortfolio/res/layout-land/activity_quotes.xml
@@ -20,16 +20,11 @@
         android:layout_height="match_parent">
 
         <FrameLayout
-            android:id="@+id/details_layout"
+            android:id="@+id/content_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
-            <fragment
-                android:id="@+id/details"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                class="pt.feup.stockportfolio.QuoteDetailsFragment" >
-            </fragment>
+          
         </FrameLayout>
     </ScrollView>
 
