--- a/Android/StockPortfolio/res/layout/add_quote.xml
+++ b/Android/StockPortfolio/res/layout/add_quote.xml
@@ -34,7 +34,7 @@
                     android:textSize="40sp" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/quotes_worth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
