--- a/Android/StockPortfolio/res/layout/quote_shares.xml
+++ b/Android/StockPortfolio/res/layout/quote_shares.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:background="#efefef"
     android:orientation="vertical"
     android:padding="0dp" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
         <RelativeLayout
             android:id="@+id/real_background"
-            android:layout_width="100dp"
-            android:layout_height="45dp"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:layout_marginTop="10dp"
             android:background="#afafaf" >
 
@@ -29,21 +29,21 @@
                 android:layout_centerVertical="true"
                 android:text="MSFT"
                 android:textColor="#ffffff"
-                android:textSize="30sp" >
+                android:textSize="20sp" >
             </pt.feup.stockportfolio.TextViewFont>
         </RelativeLayout>
 
 		<View
-		    android:layout_width="3dp"
-		    android:layout_height="45dp"
+		    android:layout_width="2dp"
+		    android:layout_height="30dp"
 		    android:layout_marginTop="10dp"
 		    android:background="#ffffff" >
 
             </View>
 
 		<RelativeLayout
-		    android:layout_width="65dp"
-		    android:layout_height="45dp"
+		    android:layout_width="55dp"
+		    android:layout_height="30dp"
 		    android:layout_marginTop="10dp"
 		    android:background="#ffffff" >
 
@@ -54,16 +54,15 @@
 			    android:layout_centerHorizontal="true"
 			    android:layout_centerVertical="true"
 			    android:text="999"
-			    android:textSize="30sp" />
+			    android:textSize="20sp" />
 
 		</RelativeLayout>
 
     </LinearLayout>
 
 	<View
-	    android:layout_width="169dp"
+	    android:layout_width="128dp"
 	    android:layout_height="1dp"
-	    android:layout_gravity="center_horizontal"
 	    android:background="#d0d0d0" >
 
 </View>	
