--- a/Android/StockPortfolio/res/layout/quote_update_separator.xml
+++ b/Android/StockPortfolio/res/layout/quote_update_separator.xml
@@ -25,7 +25,7 @@
             android:textSize="20sp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/quotes_worth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Swipe to hide for now"
