--- a/Android/StockPortfolio/res/layout/fragment_quote_details.xml
+++ b/Android/StockPortfolio/res/layout/fragment_quote_details.xml
@@ -12,6 +12,7 @@
          android:id="@+id/insertGraphHere"
          android:layout_width="match_parent"
          android:layout_height="175dp"
+         android:background="#efefef"
          android:gravity="center"
          android:orientation="horizontal" >
 
