Continuing with the commit message trend: Loads of stuff

--- a/Android/StockPortfolio/res/layout/fragment_add_quote_2.xml
+++ b/Android/StockPortfolio/res/layout/fragment_add_quote_2.xml
@@ -146,7 +146,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="10dp"
-            android:text="ticker"
+            android:hint="ticker"
             android:textColor="#a7a9ab"
             android:textSize="20sp" />
 
