--- a/Android/StockPortfolio/res/layout/fragment_portfolio.xml
+++ b/Android/StockPortfolio/res/layout/fragment_portfolio.xml
@@ -2,113 +2,130 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#efefef">
-    
-    <RelativeLayout 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:background="#efefef" >
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp" >
-        
-        <RelativeLayout
-            android:id="@+id/relativeLayout2"
-            android:layout_width="220dp"
-            android:layout_height="70dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
-            android:background="#ffffff" >
+        android:layout_height="match_parent"
+        android:background="#efefef"
+        android:orientation="vertical" >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:orientation="vertical" >
+        <RelativeLayout
+            android:id="@+id/relativeLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="120dp" >
+
+            <RelativeLayout
+                android:id="@+id/relativeLayout2"
+                android:layout_width="220dp"
+                android:layout_height="70dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="25dp"
+                android:background="#ffffff" >
 
                 <LinearLayout
+                    android:id="@+id/LinLayout1"
                     android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:background="#8CC63E"
+                    android:layout_height="69dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
                     android:orientation="vertical" >
 
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:layout_marginTop="2dp"
-                        android:text="your shares are worth"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="#ffffff"
-                        android:textSize="14sp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:background="#8CC63E"
+                        android:orientation="vertical" >
 
-                </LinearLayout>
+                        <TextView
+                            android:id="@+id/textView1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical|center_horizontal"
+                            android:layout_marginTop="2dp"
+                            android:text="your shares are worth"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textColor="#ffffff"
+                            android:textSize="14sp" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="fill_parent"
                         android:background="#ffffff"
                         android:orientation="vertical" >
-                    
-                <TextView
-                    android:id="@+id/worth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="$0"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="#8CC63E"
-                    android:textSize="30sp" />
 
-				</LinearLayout>
-            </LinearLayout>
+                        <TextView
+                            android:id="@+id/worth"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:gravity="center"
+                            android:text="$0"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:textColor="#8CC63E"
+                            android:textSize="30sp" />
+                    </LinearLayout>
+                </LinearLayout>
 
-    </RelativeLayout>
-        
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/relativeLayout1"
-        android:layout_marginTop="19dp" >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:layout_below="@id/LinLayout1"
+                    android:background="#d0d0d0" >
+                </LinearLayout>
+            </RelativeLayout>
+        </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <LinearLayout
-                android:id="@+id/pieView1"
-                android:layout_width="160dp"
-                android:layout_height="160dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:orientation="horizontal" >
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/quotes_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="15dp"
-                android:layout_toRightOf="@+id/pieView1"
-                android:gravity="center_horizontal"
-                android:orientation="vertical" >
-            </LinearLayout>
+            android:id="@+id/graphHolder"
+            android:layout_width="match_parent"
+            android:layout_height="190dp" >
         </RelativeLayout>
-    </RelativeLayout>
+        
+        <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#d0d0d0" >
+                </LinearLayout>
 
-</RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/relativeLayout1"
+            android:layout_marginTop="19dp"
+            android:paddingBottom="20dp" >
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <LinearLayout
+                    android:id="@+id/pieView1"
+                    android:layout_width="160dp"
+                    android:layout_height="160dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:orientation="horizontal" >
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/quotes_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_toRightOf="@+id/pieView1"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical" >
+                </LinearLayout>
+            </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
 
 </ScrollView>
