--- a/Android/StockPortfolio/res/layout/fragment_quote_details.xml
+++ b/Android/StockPortfolio/res/layout/fragment_quote_details.xml
@@ -25,8 +25,14 @@
      </LinearLayout>
     
      <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="#d0d0d0" >
+                </View>
+     
+     <View
          android:layout_width="match_parent"
-         android:layout_height="30dp"
+         android:layout_height="10dp"
          android:background="#efefef" />
     
     <pt.feup.stockportfolio.TextViewFont
